@@ -1,3 +1,11 @@
+2007-02-18  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structural.properties.R (transitivity) :
+	call a special function if the local transitivity of all
+	vertices requested
+	* interface/R/src/rinterface.c 
+	(R_igraph_transitivity_local_undirected_all) : added
+
 2007-02-08  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/plot.R (plot.igraph) : bug corrected
